[package]
name = "blessed-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Networking
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Content
fxhash = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
rsass = "0.28.0"

[features]
